Implement Stockfish resume checkpointing and verify feature 006
- Added analysis checkpointing, per-position upserts, and Stockfish retry/backoff

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
   </head>
   <body class="font-body bg-night text-sand">
     <div id="root"></div>
